--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@
 
 *.deb
 *.so.*
+
+libtorrent-rasterbar-1.0.4/configure
+libtorrent-rasterbar-1.0.4/doc-pak/docs/client_test.png
+libtorrent-rasterbar-1.0.4/docs/client_test.png
