--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@
 
 libtorrent-rasterbar-1.0.4/doc-pak/docs/client_test.png
 libtorrent-rasterbar-1.0.4/docs/client_test.png
+fuse_callbacks/callbacks
+
